--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^1.2.1",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "superjson": "1.9.1",
