--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.10.0",
+    "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "next": "12.3.1",
     "react": "18.2.0",
